--- a/demo/03-构造函数和原型.html
+++ b/demo/03-构造函数和原型.html
@@ -6,8 +6,11 @@
 	</head>
 	<body>
 		<script>
+			/*new创建对象*/
 			var obj1=new Object();
+			/*字面量创建对象*/
 			var obj2={};
+			/*构造函数创建对象*/
 			function Obj(uname,age){
 				this.uname=uname;
 				this.uage=age;
