--- a/demo/07-查询商品.html
+++ b/demo/07-查询商品.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
 	</head>
+
 	<body>
+		按照价格查询:
+		<input class="start" type="text" width="15px" /> -
+		<input class="end" type="text" width="30px" />
+		<input class="search-price" type="button" width="30px" value="查询" /> 按照商品的名称查询:
+		<input class="item_name" type="text" width="30px" />
+		<input class="search-name" type="button" width="30px" value="查询" />
 		<table border="1" cellspacing="0">
 			<thead>
 				<tr>
@@ -14,42 +22,64 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>1</td>
-					<td>小米</td>
-					<td>3999</td>
-				</tr>
-				<tr>
-					<td>2</td>
-					<td>oppo</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
+
 			</tbody>
 		</table>
 		<script>
 			/*数据：以数组的形式，里面存放若干的对象；*/
-			var data=[{
-				id:1,
-				name:"小米",
-				price:3999
-			},{
-				id:2,
-				name:"oppo",
-				price:999
-			},{
-				id:3,
-				name:"荣耀",
-				price:1299
-			},{
-				id:4,
-				name:"华为",
-				price:1999
+			var data = [{
+				id: 1,
+				name: "小米",
+				price: 3999
+			}, {
+				id: 2,
+				name: "oppo",
+				price: 999
+			}, {
+				id: 3,
+				name: "荣耀",
+				price: 1299
+			}, {
+				id: 4,
+				name: "华为",
+				price: 1999
 			}]
+			/*获取元素*/
+			var tbody = document.querySelector('tbody');
+			var start = document.querySelector('.start');
+			var end = document.querySelector('.end');
+			var search_price = document.querySelector('.search-price');
+			var item_name = document.querySelector('.item_name');
+			var search_name = document.querySelector('.search-name');
+			SetData(data);
+
+			function SetData(myData) {
+				tbody.innerHTML = '';
+				myData.forEach(function(value) {
+					var tr = document.createElement('tr');
+					tr.innerHTML = '<td>' + value.id + '</td><td>' + value.name + '</td><td>' + value.price + '</td>'
+					tbody.appendChild(tr);
+				});
+			}
+			search_price.addEventListener('click', function() {
+				var list = data.filter(function(value) {
+					return(value.price > start.value && value.price < end.value);
+				});
+				/*将筛选后的对象渲染到页面中*/
+				SetData(list);
+			});
+			search_name.addEventListener('click', function() {
+				var arr = [];
+				data.some(function(value) {
+					if(value.name == item_name.value) {
+						arr.push(value);/*将这个数据添加到arr中*/
+						return true;/*必须返回true，终止循环的标记*/
+					}
+				});
+				/*将筛选后的对象渲染到页面中*/
+				SetData(arr);
+			});
 		</script>
 	</body>
+
 </html>
