--- a/demo/08-对象方法.html
+++ b/demo/08-对象方法.html
@@ -24,10 +24,10 @@
             console.log(arr);
 
             Object.defineProperty(obj, 'addr',{
-                value:'ÖØÇì',
-                writable: false,//²»¿ÉÒÔĞŞ¸Ä
-                enumerable: true,//¿ÉÒÔ±»Ã¶¾Ù
-                configurable:true//¿ÉÒÔ±»É¾³ı£¬ĞŞ¸ÄÕâ¸öÌØĞÔ
+                value:'ï¿½ï¿½ï¿½ï¿½',
+                writable: false,//ä¸å¯ä»¥è¢«ä¿®æ”¹
+                enumerable: true,//å¯ä»¥è¢«æšä¸¾
+                configurable:true//å¯ä»¥è¢«åˆ é™¤/ä¿®æ”¹è¿™ä¸ªå±æ€§
             })
             delete obj.addr;
             var arr=Object.keys(obj);
